Fix colour contrast RSVP-button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ main {
     padding: 6px;
     background-color: #EB171D;
     border: 0px;
-    color: white;
+    color: black;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
@@ -138,10 +138,10 @@ main {
     font-size: 80%;
 }
 
-.hover-button:hover{
-     background-color: #342646;
+.hover-button:hover {
+    background-color: #342646;
 }
-   
+
 
 .info {
     list-style-type: none;
@@ -431,84 +431,91 @@ footer i {
     }
 }
 
-    /* Media query larger (laptops and desktops, 992px and up) */
-    @media screen and (min-width: 992px) {
+/* Media query larger (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
 
-        header {
-            padding-top: 0.8rem;
-            padding-bottom: 0.8rem;
-        }
-
-        #logo-image {
-            width: 100px;
-        }
-
-        /* Styles for main content */
-
-        main {
-            font-size: 140%;
-            margin-left: 20px;
-            margin-right: 20px;
-            margin-top: 117.38px;
-        }
-       
-        .upper-content {
-            background: url('../images/2_palmtree_silhouette_PINK.webp'),
-            url('../images/palmtree_silhoutte_white.webp');
-            background-size: 450px;
-            background-position: left 80px bottom, right bottom;
-            background-repeat: no-repeat;
-        }
-        
-
-        body .rsvp-page {
-            background-image: url('../images/Cocktail_1.webp');
-            background-size: 400px;
-            background-position: left;
-            background-repeat: no-repeat;
-        }
-
-
-        main>p {
-            text-align: center;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        h1,
-        h2 {
-            font-size: 150%;
-        }
-
-        .text-paragraphs {
-            max-width: 600px;
-            margin: 0 auto;
-
-        }
-
-        /* Styles lower content*/
-
-        .lower-content {
-            padding-top: 20px;
-            min-height: 260px;
-        }
-
-        iframe {
-            max-width: 600px;
-            max-height: 220px;
-        }
-
-        /* Footer styles */
-
-        footer {
-            min-height: 100px;
-        }
-
-        #footer-items {
-            font-size: 90%;
-        }
-
-        footer i {
-            font-size: 200%;
-        }
+    header {
+        padding-top: 0.8rem;
+        padding-bottom: 0.8rem;
     }
+
+    #logo-image {
+        width: 100px;
+    }
+
+    /* Styles for main content */
+
+    main {
+        font-size: 140%;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 117.38px;
+    }
+
+    .upper-content {
+        background: url('../images/2_palmtree_silhouette_PINK.webp'),
+            url('../images/palmtree_silhoutte_white.webp');
+        background-size: 400px;
+        background-position: left 80px bottom, right bottom;
+        background-repeat: no-repeat;
+    }
+
+    body.where-page {
+        background: url('../images/2_palmtree_silhouette_PINK.webp');
+        background-size: 350px;
+        background-position: left 80px bottom, right bottom;
+        background-repeat: no-repeat;
+    }
+
+
+    body .rsvp-page {
+        background-image: url('../images/Cocktail_1.webp');
+        background-size: 400px;
+        background-position: left;
+        background-repeat: no-repeat;
+    }
+
+
+    main>p {
+        text-align: center;
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    h1,
+    h2 {
+        font-size: 150%;
+    }
+
+    .text-paragraphs {
+        max-width: 600px;
+        margin: 0 auto;
+
+    }
+
+    /* Styles lower content*/
+
+    .lower-content {
+        padding-top: 20px;
+        min-height: 260px;
+    }
+
+    iframe {
+        max-width: 600px;
+        max-height: 220px;
+    }
+
+    /* Footer styles */
+
+    footer {
+        min-height: 100px;
+    }
+
+    #footer-items {
+        font-size: 90%;
+    }
+
+    footer i {
+        font-size: 200%;
+    }
+}
